# vibesec

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml  vibesec.yml
test-app/: config.js  config.py  migrations.sql  package.json
tests/: test_cli_features.py  test_command_injection.py  test_docker_security.py  test_github_actions.py  test_html_reporter.py  test_insecure_deserialization.py  test_nextjs_security.py  test_nodejs_security.py  test_open_redirect.py  test_path_traversal.py  test_rules.py  test_sarif_reporter.py  test_scanner_features.py  test_ssrf.py  test_ssti.py  test_taint_tracker.py  test_utils.py  test_weak_crypto.py
vibesec/: __init__.py  cli.py  config.py  fixgen.py  reporter.py  sarif_reporter.py  scanner.py  taint_tracker.py  utils.py
vibesec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vibesec/output/: html_reporter.py
vibesec/parsers/: js_ast_parser.py
vibesec/rules/: __init__.py  auth_routes.py  command_injection.py  common.py  cors.py  docker_security.py  env_secrets.py  flask_secrets.py  github_actions.py  insecure_deserialization.py  jwt.py  nextjs_security.py  nodejs_security.py  open_redirect.py  packages.py  path_traversal.py  rls.py  roles.py  secrets.py  sourcemaps.py  sql_injection.py  ssrf.py  ssti.py  weak_crypto.py  webhooks.py  xss.py
