[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesec"
version = "0.5.1"
authors = [
  { name="Ayush Khati", email="ayushiskhati305@gmail.com" }
]
description = "Security scanner for AI-generated code"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vibesec = "vibesec.cli:main"

[project.urls]
"Homepage" = "https://github.com/AyushkhatiDev/vibesec"
"Bug Tracker" = "https://github.com/AyushkhatiDev/vibesec/issues"
